--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
+
   <link rel="stylesheet" href="./css/main.css">
 
   <title>Conquer Clone</title>
@@ -11,15 +14,139 @@
 
 <body>
   <!-- Navigation -->
-  <nav class="nav"></nav>
+  <nav class="nav">
+    <ul>
+      <li><a href="#">Homepage</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">External</a></li>
+    </ul>
+  </nav>
 
   <!-- Intro -->
-  <section class="hero" id="home"></section>
+  <section class="hero" id="home">
+    <header>
+      <h1>Conquer</h1>
+      <p>Simple Bootstrap Template</p>
+    </header>
+  </section>
 
   <!-- Main Content -->
-  <section class="about"></section>
-  <section class="services"></section>
-  <section class="contact"></section>
+    <!-- About start -->
+      <!-- Cards start -->
+  <section class="about">
+    <div class="about__cards">
+      <div class="card green">
+        <img src="/img/1-1.jpg" alt="">
+        <div class="card_content">
+          <h3>Card Title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore amet consectetur libero, voluptas velit expedita sequi, vitae magnam praesentium dolorum quibusdam culpa. Beatae aliquam aperiam ea quo, aut. Tempore, nemo.</p>
+          <button class="btn btn-1">Button Green</button>
+        </div>
+      </div>
+      <div class="card blue">
+        <img src="/img/1-2.jpg" alt="">
+        <div class="card_content">
+          <h3>Responsive Design</h3>
+          <p>Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!</p>
+          <button class="btn btn-2">See Details</button>
+        </div>
+      </div>
+      <div class="card red">
+        <img src="/img/1-3.jpg" alt="">
+        <div class="card_content">
+          <h3>Parallax Layout</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nam optio, nostrum odit praesentium, eveniet, nihil placeat, obcaecati aut vitae laborum illum ut. Quia rerum libero iure similique repellendus provident.</p>
+          <button class="btn btn-3">Button Red</button>
+        </div>
+      </div>
+    </div>
+      <!-- Cards End -->
+
+      <!-- Columns start -->
+    <div class="about__cols">
+      <div class="col col-1">
+        <img src="/img/2-1.jpg" alt="">
+        <div class="col_content">
+          <h3>Two Columns Left Side</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, pariatur veritatis, quod accusantium iste quaerat molestiae nobis assumenda natus quo perspiciatis neque repellendus quos eligendi excepturi rem. Eius, unde, nihil.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum assumenda libero eos aut delectus laboriosam, repellendus repudiandae nulla ea odit repellat facere at saepe deserunt necessitatibus, vel, rem corrupti hic?</p>
+          <button class="btn btn-more">Read More</button>
+        </div>
+      </div>
+      <div class="col col-2">
+        <img src="/img/2-2.jpg" alt="">
+        <div class="col_content">
+          <h3>Two Columns Right Side</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt placeat, incidunt optio porro nisi vitae vel aliquid sunt pariatur ipsam! Fugiat optio velit nesciunt quibusdam reiciendis nobis modi et ratione!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quae mollitia iste amet? Maiores molestias provident cumque perferendis accusantium quibusdam, nobis ullam, doloremque accusamus natus quaerat minus eos tenetur quia.</p>
+          <button class="btn btn-more">Read More</button>
+        </div>
+      </div>
+    </div>
+      <!-- Columns start -->
+  </section>
+    <!-- About End -->
+
+  <section class="services">
+    <header>
+      <h2>Our Services</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae nemo voluptatum odit deserunt odio voluptates sapiente expedita ut cum, sit hic nobis praesentium? Necessitatibus eveniet, accusamus explicabo consequatur modi similique!</p>
+    </header>
+    <div class="services__cols">
+      <div class="col col-sm">
+        <img src="/img/4-1.jpg" alt="">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae, ad consectetur, sapiente id nemo eius ab fuga ipsam aliquam! Aliquam quo suscipit laudantium, eius, perspiciatis veritatis non in! Totam!</p>
+        <button>More</button>
+      </div>
+      <div class="col col-sm">
+        <img src="/img/4-2.jpg" alt="">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo doloribus earum necessitatibus possimus veniam temporibus assumenda, illum, magni velit veritatis voluptatem nostrum amet pariatur dicta, ad cum. Quibusdam, vero, ratione.</p>
+        <button>More</button>
+      </div>
+      <div class="col col-sm">
+        <img src="/img/4-3.jpg" alt="">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod sapiente tempora perferendis quo sit, soluta officiis, ratione minus ullam, consequatur totam. Reiciendis non, numquam tenetur odit aut suscipit. Placeat, voluptates.</p>
+        <button>More</button>
+      </div>
+      <div class="col col-sm">
+        <img src="/img/4-4.jpg" alt="">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio blanditiis perspiciatis esse quas delectus culpa laboriosam. Nemo laborum voluptas ab ipsam sequi quae quasi exercitationem, nisi ad optio blanditiis cupiditate?</p>
+        <button>More</button>
+      </div>
+      <div class="col col-big">
+        <img src="/img/4-5.jpg" alt="">
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit voluptate doloremque rerum sit commodi totam accusamus quam facere explicabo vitae rem, non iure, facilis delectus nulla ipsa enim! Suscipit, aliquam.</p>
+        <button>More</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h2>Contact Form</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti pariatur mollitia, magni hic, nihil enim totam nisi ad, optio, magnam vero consequatur iure quo est. Numquam dolorem, ipsam voluptatem accusantium!</p>
+    <form action="">
+      <input type="text" id="name">
+      <label for="name">Name</label>
+
+      <input type="email" id="email">
+      <label for="email">Email</label>
+
+      <input type="text" id="subject">
+      <label for="subject">Subject</label>
+
+      <textarea name="meesage" maxlength="280" placeholder="Your message here..."></textarea>
+
+      <input type="submit" name"submit" value="Send">
+    </form>
+  </section>
+
 
   <!-- Page footer -->
   <footer class="footer">
