add bg images to section headers, add footer text. Need to add scroll to top and responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#about" id="navAbout">About Us</a></li>
       <li><a href="#services" id="navServices">Services</a></li>
       <li><a href="#contact" id="navContact">Contact</a></li>
-      <li><a href="https://chingu.io/" id="navExt">External</a></li>
+      <li><a href="https://chingu.io/" id="navExt" target="_blank" rel="noreferrer noopener">External</a></li>
     </ul>
   </nav>
 
@@ -174,15 +174,10 @@
   <!-- Page footer -->
   <footer class="footer">
 
-    Use it free!
-
-    <blockquote>
-      “Conquer is free Bootstrap template from templatemo website.
-      No backlink is required to use this layout.”
-    </blockquote>
-
-    <hr>
-    Copyright © 2084 Your Company Name | Design: templatemo
+    <div class="footer_text">
+      <p>This is a clone of <a href="#">Conquer Bootstrap Template</a>, built with CSS Grid and Flexbox, by <a href="#">me</a>, as my pre-work assignment for <a href="#">Chingu</a> Voyage 11</p>
+      
+    </div>
 
   </footer>
 
