still need to fix horz scroll for small screen

--- a/index.html
+++ b/index.html
@@ -155,21 +155,21 @@
   <section class="contact" id="contact">
     <header>
       <h2>Contact Form</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti pariatur mollitia, magni hic, nihil enim totam nisi ad, optio, magnam vero consequatur iure quo est. Numquam dolorem, ipsam voluptatem accusantium!</p>
+      <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
     </header>
     <form action="">
       <fieldset class="form_name">
-        <input type="text" id="name">
+        <input type="text" id="name" placeholder="Name" required>
         <label for="name">Name</label>
       </fieldset>
 
       <fieldset class="form_email">
-        <input type="email" id="email">
+        <input type="email" id="email" placeholder="Email" required>
         <label for="email">Email</label>
       </fieldset>
 
       <fieldset class="form_subject">
-        <input type="text" id="subject">
+        <input type="text" id="subject" placeholder="Subject">
         <label for="subject">Subject</label>
       </fieldset>
 
