add important to bg-size prop on bg imgs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#333">
 
-  <title>Conquer Clone</title>
+  <title>Conquer Clone | Chingu V11 Pre-work</title>
 </head>
 
 <body>
@@ -61,8 +61,9 @@
 
   <!-- Main Content -->
     <!-- About start -->
-      <!-- Cards start -->
   <section class="about" id="about">
+
+      <!-- Cards start -->
     <div class="about__cards">
       <div class="card green">
         <img src="/img/1-1.jpg" alt="">
@@ -168,8 +169,9 @@
       </div>
     </div>
   </section>
-  <!-- Services End -->
+    <!-- Services End -->
 
+    <!-- Contact Start -->
   <section class="contact" id="contact">
     <header>
       <h2>Contact Form</h2>
@@ -196,7 +198,7 @@
       <input id="submit" type="submit" name"submit" value="Send">
     </form>
   </section>
-
+    <!-- Contact End -->
 
   <!-- Page footer -->
   <footer class="footer">
